<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.profile.MyInfoFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/layout_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:overScrollMode="never">

        <LinearLayout
            android:id="@+id/v_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/header_h"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="100dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="7sp"
                android:text="@string/personal_info"
                android:textColor="#262626"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                style="@style/InputLayout1"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/tv_name"
                    style="@style/InputHintText1"
                    android:text="@string/name" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_name"
                    style="@style/TemplateInput4" />
            </LinearLayout>

            <LinearLayout
                style="@style/InputLayout1"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/tv_cellular_phone"
                    style="@style/InputHintText1"
                    android:text="@string/cellular_phone" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_cellular_phone"
                    style="@style/TemplateInput4" />
            </LinearLayout>

            <LinearLayout
                style="@style/InputLayout1"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/tv_email"
                    style="@style/InputHintText1"
                    android:text="@string/email" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_email"
                    style="@style/TemplateInput4" />
            </LinearLayout>

            <LinearLayout
                style="@style/InputLayout1"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/tv_address"
                    style="@style/InputHintText1"
                    android:text="@string/address" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_address"
                    style="@style/TemplateInput4" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_gradient1"
        android:paddingTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/bt_next_big"
            style="@style/NextButton.primary"
            android:layout_width="match_parent"
            android:layout_marginTop="0dp"
            android:enabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>